force-app/main/default/objects/EmailConfig__c/EmailConfig__c.object-meta.xml
<CustomObject>
    <label>Email Config</label>
    <nameField>
        <label>Email Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>