force-app/main/default/objects/EmailConfig__c/fields/DebugUser__c.field-meta.xml
<CustomField>
    <fullName>DebugUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user to send an email to if IsDebug is true</description>
    <label>Debug User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Config</relationshipName>
    <type>Lookup</type>
</CustomField>