force-app/main/default/objects/EmailConfig__c/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <description>The &apos;Template Unique Name&apos; of the email template</description>
    <label>Unique Email Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>