force-app/main/default/objects/EmailConfig__c/fields/IsDebug__c.field-meta.xml
<CustomField>
    <fullName>IsDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Debug</label>
    <type>Checkbox</type>
</CustomField>