force-app/main/default/objects/EmailConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>IsDebug__c</columns>
    <columns>EmailTemplateName__c</columns>
    <columns>DebugUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>